# Radium

./: .gitignore  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8hpp.html  Application_8hpp__dep__incl.map  Application_8hpp__dep__incl.md5  Application_8hpp__incl.map  Application_8hpp__incl.md5  Application_8hpp_source.html  AssetLoader_8cpp.html  AssetLoader_8cpp__incl.map  AssetLoader_8cpp__incl.md5  AssetLoader_8hpp.html  AssetLoader_8hpp__dep__incl.map  AssetLoader_8hpp__dep__incl.md5  AssetLoader_8hpp__incl.map  AssetLoader_8hpp__incl.md5  AssetLoader_8hpp_source.html  CMakeLists.txt  ChaiScript_8cpp.html  ChaiScript_8cpp__incl.map  ChaiScript_8cpp__incl.md5  ChaiScript_8hpp.html  ChaiScript_8hpp__dep__incl.map  ChaiScript_8hpp__dep__incl.md5  ChaiScript_8hpp__incl.map  ChaiScript_8hpp__incl.md5  ChaiScript_8hpp_source.html  ClassDB_8cpp.html  ClassDB_8cpp__incl.map  ClassDB_8cpp__incl.md5  ClassDB_8hpp.html  ClassDB_8hpp__dep__incl.map  ClassDB_8hpp__dep__incl.md5  ClassDB_8hpp__incl.map  ClassDB_8hpp__incl.md5  ClassDB_8hpp_source.html  Doxyfile.in  Editor_2main_8cpp.html  (+404 more)
.github-no/workflows/: build.yml
.github/workflows/: android.yml  docs.yml  emscripten.yml  linux.yml  windows.yml
android/: addr2line.sh  copyassets.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: app.json
android/app/src/main/assets/assets/scenes/: Main.rscn
android/app/src/main/assets/assets/scripts/: bird.lua
android/app/src/main/java/com/radium/TestApp/: RadiumActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
examples/angry-birds/assets/sprites/: blocks.json
examples/flappybird/: app.json
examples/flappybird/assets/scenes/: Main.rscn
examples/flappybird/assets/scripts/: bird.lua  pipe.lua
examples/flappybird/assets/sprites/: blocks.json  texture.json
patches/: chaiscript.patch  imgui-text-editor.patch
scene_builder/: converter.py  scene.ini
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+63 more)
src/Editor/: main.cpp
src/Radium/: Application.cpp  Application.hpp  AssetLoader.cpp  AssetLoader.hpp  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  FontRenderer.cpp  FontRenderer.hpp  GameDataParser.hpp  Input.cpp  Input.hpp  Key.hpp  Math.cpp  Math.hpp  PhysicsUtil.hpp  PixelScaleUtil.hpp  Random.hpp  Scene.hpp  SceneManager.hpp  SpriteBatchRegistry.cpp  SpriteBatchRegistry.hpp  SubViewport.cpp  SubViewport.hpp  imgui_impl_nova.cpp  imgui_impl_nova.h  imgui_impl_rune.cpp  imgui_impl_rune.h  pch.hpp
src/Radium/Components/: ClearColor.hpp  Position.hpp  Size.hpp  Sprite.hpp
src/Radium/Nodes/: ChaiScript.cpp  ChaiScript.hpp  ClassDB.cpp  ClassDB.hpp  LuaScript.cpp  LuaScript.hpp  Node.cpp  Node.hpp  Script.hpp  Tree.cpp  Tree.hpp
src/Radium/Nodes/2D/: Node2D.cpp  Node2D.hpp  RigidBody.cpp  RigidBody.hpp  RigidBody2D.cpp  RigidBody2D.hpp  Sprite2D.cpp  Sprite2D.hpp  TileMap2D.cpp  TileMap2D.hpp
src/Radium/Systems/: FullDrawSpriteRenderer.hpp
src/Radium/legacy/: ClassDB.hpp
src/RadiumRuntime/: GameDataParser.hpp  main.cpp
src/TestApp/: AndroidManifest.xml  main.cpp
src/TestApp/assets/scripts/: bird.chai  pipe.chai  pipe_group.lua
subprojects/: clone.bat  clone.sh  patch.bat  patch.sh
subprojects/Rune/: CMakeLists.txt
subprojects/Rune/src/Rune/: GeometryRenderer.cpp  GeometryRenderer.hpp  Rune.cpp  Rune.hpp  RuneBindings.cpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.cpp  Texture.hpp  TraceHooks.hpp  Utils.hpp  Viewport.cpp  Viewport.hpp  objc_bridge.h  objc_bridge.mm  objc_bridge_ios.mm  objc_bridge_mac.mm
subprojects/Rune/subprojects/: clone.sh
subprojects/Rune/subprojects/wgpu-native/: CMakeLists.txt
subprojects/Rune/subprojects/wgpu-native/linux-x86_64/wgpu-native-meta/: wgpu-native-git-tag
subprojects/Rune/testapp/: main.cpp
